--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,24 @@
 .container {
     text-align: center;
-    margin-top: 50px;
+    margin-top: 35px;
+}
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    background-color: black;
 }
 
 h1 {
-    font-size: 24px;
+    font-family: 'Roboto Mono', monospace; 
+    font-size: 100px;
+    margin-bottom: 20px;
+    color: white;
 }
+
 
 input[type="date"] {
     padding: 5px;
@@ -18,8 +31,55 @@ button {
     color: white;
     border: none;
     cursor: pointer;
+    margin: 10px;
 }
 
 button:hover {
     background-color: #0056b3;
+}
+
+.help {
+    font-family: 'Roboto Mono', monospace;
+    color: white;
+    max-width: 800px;
+    padding: 200px 20px 20px 20px;
+    background-color: #000000;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.help h1 {
+    text-align: center;
+    font-size: 50px;
+    max-width: 800px;
+    padding: 100px 20px 20px 20px
+}
+
+.help h2 {
+    margin-top: 20px;
+}
+
+.help p {
+    margin-bottom: 10px;
+}
+
+.help ul, .help ol {
+    margin-bottom: 20px;
+}
+
+
+.help-button {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+
+.help-button a {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: white;
+    color: black;
+    border: 2px solid black;
+    text-decoration: none;
+    font-family: 'Roboto Mono', monospace 
 }
